--- a/.classpath
+++ b/.classpath
@@ -6,165 +6,14 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Marek/eclipse-workspace/emfViz/external jars/org.eclipse.jface-3.6.0.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Marek/eclipse-workspace/emfViz/external jars/org.eclipse.swt-3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Marek/eclipse-workspace/emfViz/external jars/org.eclipse.emf.ecore_2.25.0.v20210816-0937.jar" sourcepath="C:/Users/Marek/.p2/pool/plugins/org.eclipse.emf.ecore_2.25.0.v20210816-0937.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/plugin/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/resource/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/resource/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/util/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/namespace/util/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/internal/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/ecore/xml/type/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Marek/eclipse-workspace/emfViz/external jars/org.emoflon.smartemf_1.0.0.202202281619.jar" sourcepath="C:/Users/Marek/.p2/pool/plugins/org.emoflon.smartemf_1.0.0.202202281619.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/emoflon/smartemf/*"/>
-			<accessrule kind="accessible" pattern="org/emoflon/smartemf/persistence/*"/>
-			<accessrule kind="accessible" pattern="org/emoflon/smartemf/runtime/*"/>
-			<accessrule kind="accessible" pattern="org/emoflon/smartemf/runtime/collections/*"/>
-			<accessrule kind="accessible" pattern="org/emoflon/smartemf/runtime/notification/*"/>
-			<accessrule kind="accessible" pattern="org/emoflon/smartemf/runtime/util/*"/>
-			<accessrule kind="accessible" pattern="org/emoflon/smartemf/templates/*"/>
-			<accessrule kind="accessible" pattern="org/emoflon/smartemf/templates/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Marek/eclipse-workspace/emfViz/external jars/org.eclipse.emf.common_2.23.0.v20210924-1718.jar" sourcepath="C:/Users/Marek/.p2/pool/plugins/org.eclipse.emf.common_2.23.0.v20210924-1718.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/archive/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/command/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/notify/impl/*"/>
-			<accessrule kind="accessible" pattern="org/eclipse/emf/common/util/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Marek/eclipse-workspace/emfViz/external jars/akka-actor_2.12-2.5.19.jar">
-		<accessrules>
-			<accessrule kind="accessible" pattern="akka/*"/>
-			<accessrule kind="accessible" pattern="akka/actor/*"/>
-			<accessrule kind="accessible" pattern="akka/actor/dsl/*"/>
-			<accessrule kind="accessible" pattern="akka/actor/dungeon/*"/>
-			<accessrule kind="accessible" pattern="akka/actor/setup/*"/>
-			<accessrule kind="accessible" pattern="akka/annotation/*"/>
-			<accessrule kind="accessible" pattern="akka/compat/*"/>
-			<accessrule kind="accessible" pattern="akka/dispatch/*"/>
-			<accessrule kind="accessible" pattern="akka/dispatch/affinity/*"/>
-			<accessrule kind="accessible" pattern="akka/dispatch/forkjoin/*"/>
-			<accessrule kind="accessible" pattern="akka/dispatch/sysmsg/*"/>
-			<accessrule kind="accessible" pattern="akka/event/*"/>
-			<accessrule kind="accessible" pattern="akka/event/japi/*"/>
-			<accessrule kind="accessible" pattern="akka/event/jul/*"/>
-			<accessrule kind="accessible" pattern="akka/io/*"/>
-			<accessrule kind="accessible" pattern="akka/io/dns/*"/>
-			<accessrule kind="accessible" pattern="akka/io/dns/internal/*"/>
-			<accessrule kind="accessible" pattern="akka/japi/*"/>
-			<accessrule kind="accessible" pattern="akka/japi/function/*"/>
-			<accessrule kind="accessible" pattern="akka/japi/pf/*"/>
-			<accessrule kind="accessible" pattern="akka/japi/tuple/*"/>
-			<accessrule kind="accessible" pattern="akka/pattern/*"/>
-			<accessrule kind="accessible" pattern="akka/pattern/extended/*"/>
-			<accessrule kind="accessible" pattern="akka/routing/*"/>
-			<accessrule kind="accessible" pattern="akka/serialization/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/actor/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/extra/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/impl/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/impl/fusing/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/impl/io/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/impl/io/compression/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/impl/streamref/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/javadsl/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/scaladsl/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/serialization/*"/>
-			<accessrule kind="accessible" pattern="akka/stream/stage/*"/>
-			<accessrule kind="accessible" pattern="akka/util/*"/>
-			<accessrule kind="accessible" pattern="com/typesafe/config/*"/>
-			<accessrule kind="accessible" pattern="com/typesafe/config/impl/*"/>
-			<accessrule kind="accessible" pattern="com/typesafe/config/parser/*"/>
-			<accessrule kind="accessible" pattern="com/typesafe/sslconfig/akka/*"/>
-			<accessrule kind="accessible" pattern="com/typesafe/sslconfig/akka/util/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/decorator/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/function/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/impl/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/impl/hash/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/impl/sync/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/impl/unmodifiable/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/iterator/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/iterator/hash/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/list/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/list/array/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/list/linked/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/map/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/map/custom_hash/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/map/hash/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/procedure/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/procedure/array/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/queue/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/set/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/set/hash/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/stack/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/stack/array/*"/>
-			<accessrule kind="accessible" pattern="gnu/trove/strategy/*"/>
-			<accessrule kind="accessible" pattern="org/reactivestreams/*"/>
-			<accessrule kind="accessible" pattern="scala/*"/>
-			<accessrule kind="accessible" pattern="scala/annotation/*"/>
-			<accessrule kind="accessible" pattern="scala/annotation/meta/*"/>
-			<accessrule kind="accessible" pattern="scala/annotation/unchecked/*"/>
-			<accessrule kind="accessible" pattern="scala/beans/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/concurrent/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/convert/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/generic/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/immutable/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/mutable/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/parallel/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/parallel/immutable/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/parallel/mutable/*"/>
-			<accessrule kind="accessible" pattern="scala/collection/script/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/java8/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/java8/FunctionConverters/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/java8/SpliteratorConverters/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/java8/collectionImpl/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/java8/converterImpl/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/java8/functionConverterImpls/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/java8/runtime/*"/>
-			<accessrule kind="accessible" pattern="scala/compat/java8/wrappers/*"/>
-			<accessrule kind="accessible" pattern="scala/concurrent/*"/>
-			<accessrule kind="accessible" pattern="scala/concurrent/duration/*"/>
-			<accessrule kind="accessible" pattern="scala/concurrent/forkjoin/*"/>
-			<accessrule kind="accessible" pattern="scala/concurrent/impl/*"/>
-			<accessrule kind="accessible" pattern="scala/concurrent/java8/*"/>
-			<accessrule kind="accessible" pattern="scala/io/*"/>
-			<accessrule kind="accessible" pattern="scala/math/*"/>
-			<accessrule kind="accessible" pattern="scala/ref/*"/>
-			<accessrule kind="accessible" pattern="scala/reflect/*"/>
-			<accessrule kind="accessible" pattern="scala/reflect/macros/internal/*"/>
-			<accessrule kind="accessible" pattern="scala/runtime/*"/>
-			<accessrule kind="accessible" pattern="scala/runtime/java8/*"/>
-			<accessrule kind="accessible" pattern="scala/sys/*"/>
-			<accessrule kind="accessible" pattern="scala/sys/process/*"/>
-			<accessrule kind="accessible" pattern="scala/text/*"/>
-			<accessrule kind="accessible" pattern="scala/util/*"/>
-			<accessrule kind="accessible" pattern="scala/util/control/*"/>
-			<accessrule kind="accessible" pattern="scala/util/hashing/*"/>
-			<accessrule kind="accessible" pattern="scala/util/matching/*"/>
-			<accessrule ignoreifbetter="true" kind="nonaccessible" pattern="**/*"/>
-		</accessrules>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Marek/eclipse-workspace/emfViz/external jars/jgraphx-4.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/akka-actor_2.12-2.5.19.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/jgraphx-1.4.0.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/jgraphx-4.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/org.eclipse.emf.common_2.23.0.v20210924-1718.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/org.eclipse.emf.ecore_2.25.0.v20210816-0937.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/org.eclipse.jface-3.6.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/org.eclipse.swt-3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/org.emoflon.smartemf_1.0.0.202202281619.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Elena/emoflon-workspaces/runtime-tggViz-workspace/git/emfViz/MyEmfViz/external jars/swt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
