--- a/build.properties
+++ b/build.properties
@@ -7,4 +7,5 @@ bin.includes = META-INF/,\
                Marek/eclipse-workspace/emfViz/external jars/org.eclipse.emf.common_2.23.0.v20210924-1718.jar,\
                Marek/eclipse-workspace/emfViz/external jars/akka-actor_2.12-2.5.19.jar,\
                Marek/eclipse-workspace/emfViz/external jars/jgraphx-4.2.2.jar,\
-               emfViz.jar
+               emfViz.jar,\
+               lib/jgraphx-4.2.2.jar
