--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="Example/" kind="src" path="src"/>
+	<classpathentry excluding="Example/|Example/" kind="src" path="src"/>
+	<classpathentry exported="true" kind="lib" path="external jars/jts-core-1.19.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="external jars/jgraphx-1.4.0.2-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="external jars/jgraphx-4.2.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
