--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,4 @@
 bin.includes = META-INF/,\
                external jars/jgraphx-1.4.0.2-sources.jar,\
-               external jars/jgraphx-4.2.2.jar
+               external jars/jgraphx-4.2.2.jar,\
+               external jars/jts-core-1.19.0.jar
