--- a/emfViz/.classpath
+++ b/emfViz/.classpath
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="Example/" kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="external jars/jgraphx-1.4.0.2-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="external jars/jgraphx-4.2.2.jar" sourcepath="external jars/jgraphx-1.4.0.2-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="external jars/jgraphx-4.2.3.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
 		<attributes>
 			<attribute name="module" value="true"/>
